* 2014-07-07 - ioannis.chouklis@open-xchange.com

 - Fix for bug 26544: Get all attachments sorted by ID fails

* 2014-04-07 - martin.schneider@open-xchange.com

 - Fix for bug 31797: Initialize PatternLayout for LMDC manually if just the SyslogAppender is configured

* 2014-04-07 - tobias.friedrich@open-xchange.com

 - Fix for bug 31935: Check for potential case- and unicode-normalization conflicts when storing folders
 - Fix for bug 31685: Added displayable exception message for IFO-1700
  
* 2014-04-06 - tobias.friedrich@open-xchange.com

 - Fix for bug 31912: Don't apply personal reminder setting for appointments in shared folders  
 - Fix for bug 31895: Corrected file ID encoding when accessing the checksum storage   

* 2014-04-05 - thorben.betten@open-xchange.com

 - Fix for bug 31903: Added "infostore" to necessary dependencies

* 2014-04-05 - tobias.friedrich@open-xchange.com

 - Fix for bug 31899: Pass unique folder ID when requesting quota information  

* 2014-04-04 - thorben.betten@open-xchange.com

 - Fix for bug 31582: Remove leading and trailing whitespaces in duplicated folder check

* 2014-04-04 - thorben.betten@open-xchange.com

 - Fix for bug 31782: Proper spam handler look-up if wrapping SMAL bundle is enabled
 - Fix for bug 31906: Deny changing mail/transport protocol on mail account update operation

* 2014-04-03 - martin.herfurth@open-xchange.com

 - Fix for bug 31884: Avoid NPE.

* 2014-04-03 - thorben.betten@open-xchange.com

 - Fix for bug 31883: Ensure a non-null subject attribute to TNEF message arguments

* 2014-04-03 - jan.bauerdick@open-xchange.com

 - Fix for bug 30943: Throw exception on unknown options

* 2014-04-02 - martin.herfurth@open-xchange.com

 - Fix for bug 31779: Wrong created-by on change exception creation.

* 2014-04-02 - thorben.betten@open-xchange.com

 - Fix for bug 31856: Changed log level for a failed update task to ERROR
 - Fix for bug 31864: Added dedicated property to disable Hazelcast-based session storage