@@ -3,4 +3,5 @@ premium:
     com.openexchange.quota.task: -1
     com.openexchange.quota.contact: -1
     com.openexchange.quota.infostore: -1
+    com.openexchange.quota.attachment: -1
     withTags: ucInfostore
