@@ -11,3 +11,6 @@ com.openexchange.quota.contact=-1
 
 # The quota for infostore files
 com.openexchange.quota.infostore=-1
+
+# The quota for attachments of PIM objects
+com.openexchange.quota.attachment=-1
